modified:   E-commerce fashion website.css 	modified:   E-commerce fashion website.html 	modified:   script.js

--- a/E-commerce fashion website.html
+++ b/E-commerce fashion website.html
@@ -7,7 +7,7 @@
 
 <!-- font awesome cdn link -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-        <link
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
   rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
 />
@@ -90,6 +90,7 @@
 <!-- products section stars-->
         <section class="products" id="products">
             <h1 class="heading"> latest <span>products</span> </h1>
+
             <div class="swiper-container product-slider gap">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
@@ -288,13 +289,11 @@
                         </div>  
                     </div>
                 </div>
-                <div class="swiper-button-next"></div>
-                <div class="swiper-button-prev"></div>
             </div>
 
             <div class="swiper-container product-slider">
                 <div class="swiper-wrapper">
-                    <div class="slider-slide">
+                    <div class="swiper-slide">
                         <div class="slide">
                             <div class="icons">
                                 <a href="#" class="fas fa-heart"></a>
@@ -505,15 +504,345 @@
         <div class="box">
             <div class="image-container">
                 <div class="small-image">
-                    <img src="" alt="">
+                   <img src="c:\Users\user\Desktop\passports\Capture 002.PNG" class="small-image-1" alt="">
+                   <img src="c:\Users\user\Desktop\passports\Capture 001.PNG" class="small-image-1" alt="">
+                   <img src="c:\Users\user\Desktop\passports\Capture 004.PNG" class="small-image-1" alt="">
+                </div>
+                <div class="big-image">
+                    <img src="c:\Users\user\Desktop\passports\Capture 004.PNG" class="big-image-1" alt="">" alt="">
                 </div>
             </div>
+            <div class="content">
+                <h3>man's clothing</h3>
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="far fa-star"></i>
+                    <span>(250 reviews)</span>
+                </div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, voluptatem? Adipisci culpa fugit
+                     esse illum aliquam accusamus cumque nemo nobis, magni perferendis, libero quo excepturi, quia veritatis
+                      corporis ut quasi.</p>
+                      <div class="price">sh 2500 <span>ksh 3000</span></div>
+                      <a href="#" class="btn">add to cart </a>
+            </div>
         </div>
+
+        <div class="box">
+            <div class="image-container">
+                <div class="small-image">
+                    <img src="c:\Users\user\Desktop\passports\Capture 7.PNG" class="small-image-2" alt="">
+                    <img src="c:\Users\user\Desktop\passports\Capture 8.PNG" class="small-image-2" alt="">
+                    <img src="c:\Users\user\Desktop\passports\Capture 9.PNG" class="small-image-2" alt="">
+                </div>
+                <div class="big-image">
+                    <img src="c:\Users\user\Desktop\passports\Capture 9.PNG" class="big-image-2" alt="">
+                </div>
+            </div>
+            <div class="content">
+                <h3>woman's clothing</h3>
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="far fa-star"></i>
+                    <span>(250 reviews)</span>
+                </div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, voluptatem? Adipisci culpa fugit
+                     esse illum aliquam accusamus cumque nemo nobis, magni perferendis, libero quo excepturi, quia veritatis
+                      corporis ut quasi.</p>
+                      <div class="price">sh 2500 <span>ksh 3000</span></div>
+                      <a href="#" class="btn">add to cart </a>
+            </div>
+        </div>
+
+        <div class="box">
+            <div class="image-container">
+                <div class="small-image">
+                   <img src="c:\Users\user\Desktop\passports\Capture 005.PNG" class="small-image-3" alt="">
+                   <img src="c:\Users\user\Desktop\passports\Capture 006.PNG" class="small-image-3" alt="">
+                   <img src="c:\Users\user\Desktop\passports\Capture 007.PNG" class="small-image-3" alt="">
+                </div>
+                <div class="big-image">
+                    <img src="c:\Users\user\Desktop\passports\Capture 009.PNG" class="big-image-3" alt="">" alt="">
+                </div>
+            </div>
+            <div class="content">
+                <h3>man's clothing</h3>
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="far fa-star"></i>
+                    <span>(250 reviews)</span>
+                </div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, voluptatem? Adipisci culpa fugit
+                     esse illum aliquam accusamus cumque nemo nobis, magni perferendis, libero quo excepturi, quia veritatis
+                      corporis ut quasi.</p>
+                      <div class="price">sh 2500 <span>ksh 3000</span></div>
+                      <a href="#" class="btn">add to cart </a>
+            </div>
+        </div>
+
     </div>
 
 </section>
 <!--Featured section ends-->
 
+<!--deal section starts-->
+
+<section class="deal" id="deal">
+
+    <h1 class="heading">special <span>deal</span></h1>
+
+    <div class="row">
+
+        <div class="content">
+            <span class="discount">upto 50% off</span>
+            <h3 class="text">deal of the day</h3>
+            <div class="count-down">
+                <div class="box">
+                    <h3 id="days">00</h3>
+                    <span>days</span>
+                </div>
+                <div class="box">
+                    <h3 id="hours">00</h3>
+                    <span>hours</span>
+                </div>
+                <div class="box">
+                    <h3 id="minutes">00</h3>
+                    <span>minutes</span>
+                </div>
+                <div class="box">
+                    <h3 id="seconds">00</h3>
+                    <span>seconds</span>
+                </div>
+            </div>
+            <a href="#" class="btn">shop now</a>
+        </div>
+        <div class="image">
+            <img src="download (1).jpg" alt="">
+        </div>
+    </div>
+
+</section>
+
+<!--deal section ends-->
+
+<!---review section starts-->
+<section class="review" id="review">
+
+    <h1 class="heading">customers <span>review</span></h1>
+
+    <div class="review-slider swiper-container">
+        <div class="swiper-wrapper">
+            <div class="swiper-slider">
+                <div class="slide">
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet recusandae, tenetur modi similique
+                        sed nihil expedita autem sint commodi obcaecati harum enim voluptate explicabo aliquid 
+                        saepe consequuntur repellat eius illum.</p>
+                        <div class="user">
+                            <img src="c:\Users\user\Desktop\passports\image 001.jpg" alt="">
+                            <div class="user-info">
+                                <h3>john diego</h3>
+                                <span>happy customer</span>
+                            </div>
+                        </div>
+                </div>
+            </div>
+            <div class="swiper-slider">
+                <div class="slide">
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet recusandae, tenetur modi similique
+                        sed nihil expedita autem sint commodi obcaecati harum enim voluptate explicabo aliquid 
+                        saepe consequuntur repellat eius illum.</p>
+                        <div class="user">
+                            <img src="c:\Users\user\Desktop\passports\image 002.PNG" alt="">
+                            <div class="user-info">
+                                <h3>john diego</h3>
+                                <span>happy customer</span>
+                            </div>
+                        </div>
+                </div>
+            </div>
+
+            <div class="swiper-slider">
+                <div class="slide">
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet recusandae, tenetur modi similique
+                        sed nihil expedita autem sint commodi obcaecati harum enim voluptate explicabo aliquid 
+                        saepe consequuntur repellat eius illum.</p>
+                        <div class="user">
+                            <img src="c:\Users\user\Desktop\passports\image 002.PNG" alt="">
+                            <div class="user-info">
+                                <h3>john diego</h3>
+                                <span>happy customer</span>
+                            </div>
+                        </div>
+                </div>
+            </div>
+
+            <div class="swiper-slider">
+                <div class="slide">
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet recusandae, tenetur modi similique
+                        sed nihil expedita autem sint commodi obcaecati harum enim voluptate explicabo aliquid 
+                        saepe consequuntur repellat eius illum.</p>
+                        <div class="user">
+                            <img src="c:\Users\user\Desktop\passports\image 4.PNG" alt="">
+                            <div class="user-info">
+                                <h3>john diego</h3>
+                                <span>happy customer</span>
+                            </div>
+                        </div>
+                </div>
+            </div>
+              <div class="swiper-slider">
+                <div class="slide">
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet recusandae, tenetur modi similique
+                        sed nihil expedita autem sint commodi obcaecati harum enim voluptate explicabo aliquid 
+                        saepe consequuntur repellat eius illum.</p>
+                        <div class="user">
+                            <img src="c:\Users\user\Desktop\passports\image 005.PNG" alt="">
+                            <div class="user-info">
+                                <h3>john diego</h3>
+                                <span>happy customer</span>
+                            </div>
+                        </div>
+                </div>
+            </div>
+            <div class="swiper-slider">
+                <div class="slide">
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet recusandae, tenetur modi similique
+                        sed nihil expedita autem sint commodi obcaecati harum enim voluptate explicabo aliquid 
+                        saepe consequuntur repellat eius illum.</p>
+                        <div class="user">
+                            <img src="c:\Users\user\Desktop\passports\image 005.PNG" alt="">
+                            <div class="user-info">
+                                <h3>john diego</h3>
+                                <span>happy customer</span>
+                            </div>
+                        </div>
+                </div>
+            </div>
+
+            <div class="swiper-slider">
+                <div class="slide">
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet recusandae, tenetur modi similique
+                        sed nihil expedita autem sint commodi obcaecati harum enim voluptate explicabo aliquid 
+                        saepe consequuntur repellat eius illum.</p>
+                        <div class="user">
+                            <img src="c:\Users\user\Desktop\passports\image 003.PNG" alt="">
+                            <div class="user-info">
+                                <h3>john diego</h3>
+                                <span>happy customer</span>
+                            </div>
+                        </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!--review section ends-->
+<!--footer section stars-->
+<section class="footer">
+
+    <div class="footer-container">
+
+        <div class="box-container">
+
+            <div class="box">
+                <h3>quick links</h3>
+                <a href="#">home</a>
+                <a href="#">Products</a>
+                <a href="#">Featured</a>
+                <a href="#">deal</a>
+                <a href="#">review</a>
+            </div>
+
+            <div class="box">
+                <h3>extra links</h3>
+                <a href="#">my account</a>
+                <a href="#">my favorite</a>
+                <a href="#">my order</a>
+                <a href="#">my cart</a>
+            </div>
+
+            <div class="box">
+                <h3>download links</h3>
+                <a href="#">windows stores</a>
+                <a href="#">app stores</a>
+                <a href="#">gooogle stores</a>
+            </div>
+
+            <div class="box">
+                <h3>contact us</h3>
+                <a href="#">0700 000 222</a>
+                <a href="#">fake@gmail.com</a>
+                <a href="#">Nyeri, Kenya -1976-10100</a>
+                <img src="c:\Users\user\Desktop\passports\image 007.PNG" alt="">
+            </div>
+        </div>
+
+        <div class="credit"> created by <span>Miss Wb Dev</span> | all rights reserved </div>
+    </div>
+</section>
+<!--footer section ends-->
+
+
+
+
+
+
+
+<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 <!-- custom js file link-->
         <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
         <script src="script.js"></script>
